{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Touch",
            "id": "d1fd4c8f-1016-4855-b5f7-9fcfa1543cd2",
            "actions": [
                {
                    "name": "SwipeLeft",
                    "type": "Value",
                    "id": "26833fd9-1887-407c-8edd-b84c8dfae4e6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "93c50747-c5fa-4323-8812-0dcd9d14aef8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwipeRight",
                    "type": "Value",
                    "id": "e2168136-6f64-4d3e-8ff7-7db3e40427aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "14e5207c-3eb4-4bd2-9d37-30b7b17738b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "e344d294-b0c9-470c-bcfd-b5a8d7b440ce",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "37479dda-826b-423b-9750-e8edcf4acd27",
                    "path": "<Touchscreen>/delta/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "SwipeLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc4701be-76b2-4eeb-a2a7-c4e0c86b2550",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ac6557d-dff8-4379-94a9-12c74ec740dd",
                    "path": "<Touchscreen>/delta/Right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "SwipeRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4881903c-a827-406b-9a3e-344694617d21",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6227c7f7-c904-47e5-85dd-e0c00876f454",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Touchscreen",
            "bindingGroup": "Touchscreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}